# xsettings

./: LICENSE  README.md  meson.build  meson_options.txt  xsettings.c  xsettings.h
demo/: demo.c  meson.build  xsettings-schema.h
test/: meson.build  test.c  xsettings-schema.h
